{
[eval]:1
const routes = require('./routes/analytics'); console.log('Routes loaded successfully'); console.log('Route stack:', routes.stack ? routes.stack.length : 'No stack'); if (routes.stack) { routes.stack.forEach((r, i) = if (r.route) { console.log(`Route ${i}: ${Object.keys(r.route.methods).join(',')} ${r.route.path}`); } }); }
                                                                                                                                                                                                                ^^^^^^

SyntaxError: Invalid left-hand side in assignment
    at makeContextifyScript (node:internal/vm:122:14)
    at node:internal/process/execution:89:22
    at [eval]-wrapper:6:24
    at runScript (node:internal/process/execution:83:62)
    at evalScript (node:internal/process/execution:114:10)
    at node:internal/main/eval_string:30:3

Node.js v18.20.8
